@@ -1,3 +1,8 @@
+01-01-21 : More Garble tweaks
+           - Even easier to understand with maxed language skills
+           - Group tells are now considered non-verbal communication
+             The same as newbie or wiznet channels.
+
 12-21-20 : Garble tweaks
            - Non-frogs now have a chance to understand bullycroak if
              they know the skill
